--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'App Store Connect Application Version'
-description: 'Get latest version of application from the App Store'
+description: 'Get latest and previous versions of application from the App Store Connect'
 inputs:
   app-id:
     description: 'App Store application identifier'
