--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+          
       - name: 'Get App Store Version #1'
         uses: ./
         id: case_1
         with:
           app-id: ${{ secrets.APP_ID }}
-          json-web-token: ${{ secrets.JWT }}
+          key-id: ${{ secrets.KEY_ID }}
+          issuer-id: ${{ secrets.ISSUER_ID }}
+          private-key-raw: ${{ secrets.PRIVATE_KEY_RAW }}
 
       - name: 'Get results #1'
         run: |
@@ -29,7 +31,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           key-id: ${{ secrets.KEY_ID }}
           issuer-id: ${{ secrets.ISSUER_ID }}
-          private-key-raw: ${{ secrets.PRIVATE_KEY_RAW }}
+          private-key-p8-base64: ${{ secrets.PRIVATE_KEY_FILE_BASE64 }}
 
       - name: 'Get results #2'
         run: |
@@ -37,7 +39,10 @@ jobs:
           echo "App Store latest state: The time was ${{ steps.case_2.outputs.app-state-latest }}"
           echo "App Store previous version: The time was ${{ steps.case_2.outputs.app-version-previous }}"
           echo "App Store previous state: The time was ${{ steps.case_2.outputs.app-state-previous }}"
-          
+      
+      - name: Decode base64 to file
+        run: echo ${{ secrets.PRIVATE_KEY_FILE_BASE64 }} | base64 --decode > AuthKey.p8
+      
       - name: 'Get App Store Version #3'
         uses: ./
         id: case_3
@@ -45,7 +50,7 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           key-id: ${{ secrets.KEY_ID }}
           issuer-id: ${{ secrets.ISSUER_ID }}
-          private-key-p8-base64: ${{ secrets.PRIVATE_KEY_FILE_BASE64 }}
+          private-key-p8-path: ./AuthKey.p8
 
       - name: 'Get results #3'
         run: |
@@ -53,23 +58,18 @@ jobs:
           echo "App Store latest state: The time was ${{ steps.case_3.outputs.app-state-latest }}"
           echo "App Store previous version: The time was ${{ steps.case_3.outputs.app-version-previous }}"
           echo "App Store previous state: The time was ${{ steps.case_3.outputs.app-state-previous }}"
-      
-      - name: Decode base64 to file
-        run: echo ${{ secrets.PRIVATE_KEY_FILE_BASE64 }} | base64 --decode > AuthKey.p8
-      
-      - name: 'Get App Store Version #4'
-        uses: ./
-        id: case_4
-        with:
-          app-id: ${{ secrets.APP_ID }}
-          key-id: ${{ secrets.KEY_ID }}
-          issuer-id: ${{ secrets.ISSUER_ID }}
-          private-key-p8-path: ./AuthKey.p8
-
-      - name: 'Get results #4'
-        run: |
-          echo "App Store latest version: ${{ steps.case_4.outputs.app-version-latest }}"
-          echo "App Store latest state: The time was ${{ steps.case_4.outputs.app-state-latest }}"
-          echo "App Store previous version: The time was ${{ steps.case_4.outputs.app-version-previous }}"
-          echo "App Store previous state: The time was ${{ steps.case_4.outputs.app-state-previous }}"
         
+#       # Use this action with non-expired jwt
+#       - name: 'Get App Store Version #4'
+#         uses: ./
+#         id: case_4
+#         with:
+#           app-id: ${{ secrets.APP_ID }}
+#           json-web-token: ${{ secrets.JWT }}
+
+#       - name: 'Get results #4'
+#         run: |
+#           echo "App Store latest version: ${{ steps.case_4.outputs.app-version-latest }}"
+#           echo "App Store latest state: The time was ${{ steps.case_4.outputs.app-state-latest }}"
+#           echo "App Store previous version: The time was ${{ steps.case_4.outputs.app-version-previous }}"
+#           echo "App Store previous state: The time was ${{ steps.case_4.outputs.app-state-previous }}"
