[UPDATE] iTunes Lookup test steps

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           JSON_OUTPUT="${JSON_OUTPUT//'%'/'%25'}"
           JSON_OUTPUT="${JSON_OUTPUT//$'\n'/'%0A'}"
           JSON_OUTPUT="${JSON_OUTPUT//$'\r'/'%0D'}"
-          echo "Parsed version from JSON: ${{ fromJson(JSON_OUTPUT).version }}"
+          echo "Parsed version from JSON: ${{ fromJson($JSON_OUTPUT).version }}"
 
       - name: 'Get Version from iTunes Lookup #2'
         uses: ./
