[UPDATE] Steps testing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: 'Get iTunes Lookup JSON Output #1'
         id: case_itunes_json
         run: |
-          JSON_OUTPUT=steps.case_itunes_1.outputs.versions-output-json
+          JSON_OUTPUT=${{ steps.case_itunes_1.outputs.versions-output-json }}
           JSON_OUTPUT="${JSON_OUTPUT//'%'/'%25'}"
           JSON_OUTPUT="${JSON_OUTPUT//$'\n'/'%0A'}"
           JSON_OUTPUT="${JSON_OUTPUT//$'\r'/'%0D'}"
