--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,20 @@ jobs:
           use-https: 'true'
           itunes-lookup-try-api-on-failure: 'false'
 
+      - name: 'Get iTunes Lookup JSON Output #1'
+        id: case_itunes_json
+        run: |
+          JSON_OUTPUT=steps.case_itunes_1.outputs.versions-output-json
+          JSON_OUTPUT="${JSON_OUTPUT//'%'/'%25'}"
+          JSON_OUTPUT="${JSON_OUTPUT//$'\n'/'%0A'}"
+          JSON_OUTPUT="${JSON_OUTPUT//$'\r'/'%0D'}"
+          echo "jsonOutput=$JSON_OUTPUT" >> $GITHUB_OUTPUT
+
       - name: 'Get iTunes Lookup results #1'
         run: |
           echo "App Store latest version: ${{ steps.case_itunes_1.outputs.app-version-latest }}"
           echo "App Store latest creation date: ${{ steps.case_itunes_1.outputs.version-created-date-latest }}"
-          echo "JSON: ${{ steps.case_itunes_1.outputs.versions-output-json }}"
+          echo "Parsed version from JSON: ${{ fromJson(steps.case_itunes_json.outputs.jsonOutput).version }}"
 
       - name: 'Get Version from iTunes Lookup #2'
         uses: ./
