--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: 'Get iTunes Lookup JSON Output #1'
         id: case_itunes_json
         run: |
-          JSON_OUTPUT={{ steps.case_itunes_1.outputs.versions-output-json }}
+          JSON_OUTPUT=${{ steps.case_itunes_1.outputs.versions-output-json }}
           echo "jsonOutput=$JSON_OUTPUT" >> $GITHUB_OUTPUT
 
       - name: 'Get iTunes Lookup results #1'
