--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,11 @@ jobs:
       - name: 'Get iTunes Lookup JSON Output #1'
         id: case_itunes_json
         run: |
-          JSON_OUTPUT=${{ steps.case_itunes_1.outputs.versions-output-json }}
-          FORMATTED_OUTPUT=$(cat <<EOF
-          $JSON_OUTPUT
-          EOF
-          )
-          echo $FORMATTED_OUTPUT
-          echo "jsonOutput=$FORMATTED_OUTPUT" >> $GITHUB_OUTPUT
+          JSON_OUTPUT='${{ steps.case_itunes_1.outputs.versions-output-json }}'
+          JSON_OUTPUT="${JSON_OUTPUT//'%'/'%25'}"
+          JSON_OUTPUT="${JSON_OUTPUT//$'\n'/'%0A'}"
+          JSON_OUTPUT="${JSON_OUTPUT//$'\r'/'%0D'}"
+          echo "jsonOutput=$JSON_OUTPUT" >> $GITHUB_OUTPUT
 
       - name: 'Get iTunes Lookup results #1'
         run: |
